# floppa-files

./: .gitignore  Makefile
server/: Cargo.toml
server/src/: main.rs
web/: package.json  rollup.config.ts
web/public/: index.html
web/src/: App.svelte  main.ts
web/src/components/: File.svelte  Layout.svelte  QuestionAnswer.svelte  index.ts
web/src/pages/: FAQ.svelte  Upload.svelte
web/src/scss/: _variables.scss  file.scss  global.scss  layout.scss  questionanswer.scss  upload.scss
