[package]
name = "floppa-files"
version = "0.1.0"
authors = ["chxry"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
actix-web = "3.3.2"
actix-multipart = "0.3.0"
actix-files = "0.5.0"
nanoid = "0.4.0"